--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
 
   /* Display a point marker with pop-up text */
   L.marker([41.77, -72.69]).addTo(map) // EDIT marker coordinates
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  .bindPopup("Hartford point 1"); // EDIT pop-up text message
     
      /* Display a point marker with pop-up text */
   L.marker([41.78, -72.69]).addTo(map) // EDIT marker coordinates
-  .bindPopup("Insert pop-up text here"); // EDIT pop-up text message
+  .bindPopup("Hartford point 2"); // EDIT pop-up text message
 
   </script>
 </body>
